fixed column spacing

--- a/public/style.css
+++ b/public/style.css
@@ -6,9 +6,16 @@ CSS Style Controller
 
 /* General Styling */
 
+/* Body */
+.body_style {
+    font-family: 'Roboto Mono', monospace;
+}
+
+/* Tables */ 
 .table_container {
     text-align: center;
     overflow-x: auto;
+    margin-bottom: 10%;
 }
 
 .table_and_nav {
@@ -18,55 +25,106 @@ CSS Style Controller
 table {
     border-collapse: collapse;
     width: 100%;
-    border: 1px solid #ddd;
     margin-top: 4%;
     margin-bottom: 4%;
 }
 
+#hike_table {
+    border: 1px solid #ddd;
+}
+
+#hikes_column1 {
+    width: 60%;
+}
+
+#hikes_column2 {
+    width: 20%;
+    padding-left: 6.5%;
+}
+
+#hikes_column3 {
+    width: 20%;
+    padding-left: 5.5%;
+}
+
+.directions_container {
+    text-align: center;
+    overflow-x: auto;
+}
+
 #directions_table {
-    padding-left: 2%;
-    padding-right: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    width: 80%;
+    display: inline-block;
+}
+
+#directions_column1 {
+     width: 60%;
+}
+
+#directions_column2 {
+     width: 20%;
+}
+
+tbody {
+    height: 100%;
+    overflow-y: auto;
+}
+
+th {
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-right: 4%;
+    background-color: rgb(71, 92, 72);
+    color: white;
+    text-align: justify;
+    font-size: 1.25rem;
+ }
+ 
+ tr:nth-child(even){
+     background-color: #f2f2f2
+ }
+ 
+ tr:hover {
+     background-color: #ddd;
+ }
+     
+ td {
+     text-align: left;
+     padding: 8px 8px;
+     padding-left: 4%;
+     padding-right: 4%;
+ }
+
+ #directions_table td {
+     padding-left: 7.5%;
+ }
+
+/* Headers */
+h1 {
+    padding-top: 3%;
+    padding-bottom: 3%;
 }
 
 h3 {
     padding-top: 2%;
-    padding-bottom: 2%;
 }
 
-th {
-   padding-top: 2%;
-   padding-bottom: 2%;
-   padding-right: 4%;
-   background-color: rgb(71, 92, 72);
-   color: white;
-   text-align: left;
-}
-
-tr:nth-child(even){
-    background-color: #f2f2f2
-}
-
-tr:hover {
-    background-color: #ddd;
-}
-    
-td {
-    text-align: left;
-    padding: 8px;
-}
-
-#map {
-    height: 400px;
-    width: 100%;
-    margin-bottom: 2%;
+/* Buttons */
+button {
+    margin-bottom: 10%;
 }
 
 .navto_hike_map_page {
     margin-bottom: 2%;
 }
 
-.directions_container {
-    overflow-x: auto;
+/* Map */
+#map {
+    height: 400px;
+    width: 100%;
+    margin-bottom: 2%;
 }
 
 /* Visibility Controls */
